[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "si_units_nilsiraptor"
version = "0.2"
authors = [
  { name="Nilsiraptor", email="nils.programming@gmail.com" },
]
description = "A package providing physical and mathematical constants"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "physics",
    "constant",
    "units",
    "si units"
]

[project.urls]
"Homepage" = "https://github.com/Nilsiraptor/SI_units"
